# pywikifetch

./: README.md  pyproject.toml
pywikifetch/: __init__.py  wikifetch.py  wikitext_formatter.py
test/: test_formatter.py
